RESOLVED FIXED88783
REGRESSION (r119779): Javascript TypeError: 'undefined' is not an object
https://bugs.webkit.org/show_bug.cgi?id=88783
Summary REGRESSION (r119779): Javascript TypeError: 'undefined' is not an object
Kevin M. Dean
Reported 2012-06-11 07:57:19 PDT
Created attachment 146855 [details] Working Using cPanel's server administration tool WHM, I've started to have javascript errors on the "Mail Delivery Reports" pages and possibly others. When the page loads javascript adds interactive controls for the Start and Stop times and that fails to happen. Also, clicking the calendar icon is supposed to open a calendar overlay and clicking the Run Report button doesn't load the report. The console shows: (5) TypeError: 'undefined' is not an object (evaluating '[].slice') utilities_container.js:13 TypeError: 'undefined' is not an object (evaluating 'new CPANEL.datasource.CPANEL_XHRDataSource') emailstats_search:506 (43) TypeError: 'undefined' is not an object (evaluating '[].slice') I'm attaching working and not working screenshots. Since the problem page is within my server admin, I can't provide direct access, so I'm going to see if I can extract enough for a test reduction.
Attachments
Working (19.51 KB, image/png)
2012-06-11 07:57 PDT, Kevin M. Dean
no flags
Broken (18.65 KB, image/png)
2012-06-11 07:57 PDT, Kevin M. Dean
no flags
the patch (11.76 KB, patch)
2012-06-12 14:11 PDT, Filip Pizlo
ggaren: review+
Kevin M. Dean
Comment 1 2012-06-11 07:57:42 PDT
Kevin M. Dean
Comment 2 2012-06-11 08:36:20 PDT
I've added a test page where at least the non loading of the time widgets and the lack of calendar pop-up can be tested. http://development.rhubarbproductions.com/webkit/whm/ Note that removing the following script at line 87 seems to allow it to work again, so maybe that'll help provide a clue even though the scripts content doesn't appear to be related to where the issue is. <script> new CPANEL.widgets.Page_Notice( { container: "cjt_static_notice_container", level: "info", content: "<strong>Note:</strong> Queries can only return a maximum of 5,000 entries." } ); </script>
Alexey Proskuryakov
Comment 3 2012-06-11 14:13:01 PDT
Alexey Proskuryakov
Comment 4 2012-06-11 14:13:17 PDT
Filip Pizlo
Comment 5 2012-06-12 14:11:18 PDT
Created attachment 147158 [details] the patch
Geoffrey Garen
Comment 6 2012-06-12 14:14:04 PDT
Comment on attachment 147158 [details] the patch r=me
Filip Pizlo
Comment 7 2012-06-12 14:16:38 PDT
Note You need to log in before you can comment on or make changes to this bug.