REGRESSION (r119779): Javascript TypeError: 'undefined' is not an object https://bugs.webkit.org/show_bug.cgi?id=88783 <rdar://problem/11640299>

Source/JavaScriptCore:

Reviewed by Geoffrey Garen.

If you don't keep alive the base of an object access over the various checks
you do for the prototype chain, you're going to have a bad time.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleGetById):

LayoutTests:

Reviewed by Geoffrey Garen.

* fast/js/dfg-proto-access-inline-osr-exit-expected.txt: Added.
* fast/js/dfg-proto-access-inline-osr-exit.html: Added.
* fast/js/script-tests/dfg-proto-access-inline-osr-exit.js: Added.
(foo):
(Thingy):



Canonical link: https://commits.webkit.org/106745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120121 268f45cc-cd09-0410-ab3c-d52691b4dbfc